# awo

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  awo-sample.toml
src/: args.rs  config.rs  main.rs
src/manager/: mod.rs  process.rs  time.rs  watcher.rs
