[package]
name = "awo"
version = "0.1.0"
authors = ["Ilya Zamaratskikh <mrtstgdev@gmail.com>"]
edition = "2024"
license = "BSD-3-Clause"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "1.1.2"
serde = { version = "1.0", features = ["derive"] }
glob = "0.3.3"
tokio-util = "0.7.18"
rand = "0.10.1"
ansi_term = "0.12.1"
nix = { version = "0.31.2", features = ["signal"]}
shlex = "1.3.0"
